# torchScript

./: .gitignore  CMakeLists.txt  main.cpp
include/: TorchWrapper.hpp
script/: transferExample.py
src/: TorchWrapper.cpp  TorchWrapperTest.cpp
